[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2021"
rust-version = "1.65"
authors = [
    "Summa <team@summa.one>",
    "James Prestwich <james@prestwi.ch>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/summa-tx/coins"
repository = "https://github.com/summa-tx/coins"

[workspace.dependencies]
coins-bip32 = { path = "crates/bip32", version = "0.13" }
coins-bip39 = { path = "crates/bip39", version = "0.13" }
coins-core = { path = "crates/core", version = "0.13" }
coins-ledger = { path = "crates/ledger", version = "0.13" }

# core
base64 = "0.21"
bech32 = "0.9"
bs58 = "0.5.1"
digest = "0.10.7"
generic-array = "0.14.7"
hex = { package = "const-hex", version = "1.12.0" }
ripemd = "0.1.3"
serde = "1.0.203"
sha3 = "0.10.8"

# bip32
hmac = "0.12.1"
k256 = { version = "0.13.3", features = ["std", "arithmetic"] }
sha2 = "0.10.8"
thiserror = "1.0.61"

# bip39
bitvec = "1.0.1"
pbkdf2 = "0.12.2"
rand = "0.9.0"
once_cell = "1.19.0"

# ledger
async-trait = "0.1.80"
cfg-if = "1.0.0"

