[package]
name = "coins-bip32"
version = "0.3.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bip32 (and related BIPs) in Rust"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
hmac = "0.11.0"
sha2 = "0.9.5"
bs58 = "0.4.0"
lazy_static = "1.4.0"
coins-core = "0.2.0"
serde = "1.0.105"
bincode = "1.3.3"

k256 = { version = "0.10", features = ["std", "arithmetic"] }
digest = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex = "0.4.2"
criterion = "0.3.1"

[features]
default = ["mainnet"]
mainnet = []
testnet = []

