[package]
name = "coins-bip32"
version = "0.8.7"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bip32 in Rust"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
coins-core = { version = "0.8.3", path = "../core" }

bs58 = "0.5"
digest = "0.10"
hmac = "0.12"
k256 = { version = "0.13", features = ["std", "arithmetic"] }
serde = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"

[features]
default = ["mainnet"]
mainnet = []
testnet = []
