[package]
name = "coins-bip39"
version = "0.8.3"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"
description = "Bip39 in Rust"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
bitvec = "0.17.4"
coins-bip32 = { version ="0.8.3", path = "../bip32" }
hex = "0.4.2"
hmac = "0.12"
once_cell = "1.17.1"
pbkdf2 = "0.12"
rand = "0.8.4"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1.37"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.3"
default-features = false
features=["js"]
