[package]
name = "rmn-btc-wasm"
version = "0.1.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bitcoin transaction construction in JS using wasm-bindgen"
repository = "https://github.com/summa-tx/riemann-rs"
license = "LGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

# Recommended when packing the wasm for release
[profile.release]
lto = true
opt-level = 'z'

[dependencies]
riemann-core = {path = "../core"}
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
bitcoin-spv = "2.0.0"
thiserror = "1.0"
serde = "1.0.105"

[dependencies.rmn-btc]
path = "../bitcoin"
default-features = false

# [features]
# default = ["wasm"]
# wasm = ["rmn-btc/rust-secp"]
