[package]
name = "rmn-btc-wasm"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bitcoin transaction construction in JS using wasm-bindgen"
repository = "https://github.com/summa-tx/riemann-rs"
license = "LGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Recommended when packing the wasm for release
[profile.release]
lto = true
opt-level = 'z'

[dependencies]
riemann-core = {path = "../core"}
rmn-btc = {path = "../bitcoin"}
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
bitcoin-spv = "2.0.0"
thiserror = "1.0"
serde_derive = "1.0.106"
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"
