[package]
name = "rmn-btc"
version = "0.1.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bitcoin transaction construction in Rust"
repository = "https://github.com/summa-tx/riemann-rs"
license = "LGPL-3.0-or-later"

[dependencies]
bitcoin-spv = "2.0.0"
hex = "0.4.2"
bech32 = "0.7.2"
base58check = "0.1.0"
thiserror = "1.0"
sha2 = "0.8.0"
riemann-core = { path = "../core" }
serde = "1.0.105"
