[package]
name = "bitcoins-wasm"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bitcoin transaction construction in JS using wasm-bindgen"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Recommended when packing the wasm for release
[profile.release]
lto = true
opt-level = 'z'

[dependencies]
coins-core = {path = "../core"}
bitcoins = {path = "../bitcoins"}
wasm-bindgen = "0.2.65"
js-sys = "0.3.37"
thiserror = "1.0"
serde_derive = "1.0.106"
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
