[package]
name = "bitcoins"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Bitcoin transaction construction in Rust"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "LGPL-3.0-or-later"

[dependencies]
bitcoin-spv = "2.0.0"
hex = "0.4.2"
bech32 = "0.7.2"
base58check = "0.1.0"
thiserror = "1.0"
sha2 = "0.8.1"
serde = "1.0.105"
coins-core = { path = "../core" }

[dependencies.coins-bip32]
path = "../bip32"
default-features = false

[features]
default = ["mainnet"]
mainnet = ["coins-bip32/mainnet"]
testnet = ["coins-bip32/testnet"]
signet = ["coins-bip32/testnet"]
