[package]
name = "coins-core"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Abstract UTXO transactions to enable code reuse across chains"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
base58check = "0.1.0"
bech32 = "0.7.2"
blake2-rfc = "0.2.18"
bitcoin-spv = "4.0.1"
hex = "0.4.2"
thiserror = "1.0"
sha2 = "0.8.0"
base64 = "0.12.0"
serde_derive = "1.0.106"
serde = { version = "1.0.106", features = ["derive"] }
