[package]
name = "coins-core"
version = "0.2.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Abstract UTXO transactions to enable code reuse across chains"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
base58check = "0.1.0"
bech32 = "0.7.2"
hex = "0.4.2"
thiserror = "1.0"
base64 = "0.12.0"
serde_derive = "1.0.106"
serde = { version = "1.0.106", features = ["derive"] }

# update in parallel
generic-array = "0.14.4"
digest = "0.9.0"
blake2 = "0.9.0"
sha2 = "0.9.1"
sha3 = "0.9.1"
ripemd160 = "0.9.1"
