[package]
name = "coins-core"
version = "0.8.7"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
description = "Core library for coins-bip32 and coins-bip39"
repository = "https://github.com/summa-tx/coins"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.21"
bech32 = "0.9"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
thiserror = "1.0"

# update in parallel
digest = "0.10"
generic-array = "0.14"
ripemd = "0.1"
sha2 = "0.10"
sha3 = "0.10"
