[package]
name = "handshakes"
version = "0.3.0"
authors = ["Mark Tyneway <mark.tyneway@gmail.com>"]
edition = "2018"
description = "Handshake transaction construction in Rust"
repository = "https://github.com/summa-tx/riemann-rs"
license = "LGPL-3.0-or-later"

[dependencies]
blake2-rfc = "0.2.18"
hex = "0.4.2"
bech32 = "0.7.2"
thiserror = "1.0"
sha2 = "0.8.1"
sha3 = "0.8.2"
serde = "1.0.105"


coins-core = {version = "0.3.0", path = "../core"}
coins-bip32 = { version = "0.3.0", path ="../bip32",default-features =  false }
bitcoins =  {version = "0.3.0", path="../bitcoins"}
