[package]
name = "coins-ledger"
version = "0.4.5"
authors = ["Summa <team@summa.one>", "James Prestwich <james@summa.one>", "Zondax GmbH <info@zondax.ch>"]
edition = "2018"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "apdu", "cryptocurrency"]
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"
description = "Ledger Nano X/S connection and communication management library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
async-trait = "0.1.3"
log = "0.4.11"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.3.0"
byteorder = "1.3.1"
blake2b_simd = "0.5.10"
libc = "0.2.50"
cfg-if = "0.1.7"
matches = "0.1.8"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hidapi-rusb]
version = "1.3.0"

# linux native only
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.13.0"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.10"
js-sys = "0.3.37"

[dev-dependencies]
serial_test = "0.3.2"
tokio = {version = "0.2.22", features = ["rt-threaded", "macros"]}

[features]
browser = []
node = []

# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
