[package]
name = "coins-ledger"
version = "0.8.7"
authors = [
    "Summa <team@summa.one>",
    "James Prestwich <james@summa.one>",
    "Zondax GmbH <info@zondax.ch>",
]
edition = "2018"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "apdu", "cryptocurrency"]
repository = "https://github.com/summa-tx/coins"
license = "MIT OR Apache-2.0"
description = "Ledger Nano X/S connection and communication management library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
futures = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0"
thiserror = "1.0"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.4"
byteorder = "1.4"
libc = "0.2"
matches = "0.1"
tracing = "0.1"
hidapi-rusb = "1.3"

# linux native only
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serial_test = "2"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }

[features]
browser = []
node = []
