[package]
name = "coins-ledger"
version = "0.9.1"
authors = [
    "Summa <team@summa.one>",
    "James Prestwich <james@summa.one>",
    "Zondax GmbH <info@zondax.ch>",
]
edition = "2018"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "apdu", "cryptocurrency"]
repository = "https://github.com/summa-tx/coins"
license = "MIT OR Apache-2.0"
description = "Ledger Nano X/S connection and communication management library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
hex = "0.4"
thiserror = "1.0"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = "1.18.0"
byteorder = "1.5"
tracing = "0.1"
hidapi-rusb = "1.3"
tokio = { version = "1.34", features = ["sync", "rt"] }

# linux native only
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serial_test = "2"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

[features]
browser = []
node = []
