[package]
name = "rmn-ltc"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmn-btc = {path = "../bitcoin"}
riemann-core = { path = "../core"}
