[package]
name = "litecoins"
version = "0.1.0-rc.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "LGPL-3.0-or-later"
repository = "https://github.com/summa-tx/bitcoins-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoins = {path = "../bitcoins"}
coins-core = { path = "../core"}
