[package]
name = "litecoins"
version = "0.2.2"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/summa-tx/bitcoins-rs"
description = "Litecoin transaction construction in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoins = {version = "0.3.0", path= "../bitcoins"}
coins-core = "0.2.0"

# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
