[package]
name = "rmn-btc-provider"
version = "0.1.0-alpha"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"

futures-core = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.5", default-features = false }
futures-timer = "3.0.2"
pin-project = { version = "0.4.20", default-features = false }

riemann-core = { path = "../core" }
rmn-btc = { path = "../bitcoin" }

# esplora cache
lru = { version = "0.5.2", optional = true }
thiserror = { version = "1.0", optional = true }
reqwest = { version = "0.10.4", features = ["json"], optional = true }
hex = { version = "0.4.2", optional = true }
serde = { version = "1.0.106", features = ["derive"], optional = true }
serde_json = { version = "1.0.55", optional = true }

# building wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"]  }

[dev-dependencies]
tokio = "0.2.21"

[features]
default = ["mainnet", "esplora"]
esplora = ["lru", "reqwest", "thiserror", "hex", "serde", "serde_json", "futures-util/std"]

# mutually exclusive
mainnet = ["rmn-btc/mainnet"]
testnet = ["rmn-btc/testnet"]
