[package]
name = "bitcoins-provider"
version = "0.1.0-alpha"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
repository = "https://github.com/summa-tx/bitcoins-rs"
license = "MIT OR Apache-2.0"

[dependencies]
# core utilities
async-trait = "0.1.36"
futures-core = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.5", default-features = false, features = ["std", "channel"] }
futures-timer = "3.0.2"
pin-project = { version = "0.4.20", default-features = false }
lru = { version = "0.5.2" }

# other projects in this workspace
coins-core = { path = "../core" }
bitcoins = { path = "../bitcoins", default-features = false }

# RPC only
secrecy = { version = "0.7.0", optional = true }

# shared by multiple providers
thiserror = { version = "1.0" }
reqwest = { version = "0.10.4", features = ["json"], optional = true }
hex = { version = "0.4.2", optional = true }
serde = { version = "1.0.106", features = ["derive"], optional = true }
serde_json = { version = "1.0.55", optional = true }
bytes = { version = "^0.5", optional = true }

# building wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"]  }

[dev-dependencies]
tokio = "0.2.21"

[features]
default = ["mainnet", "esplora", "rpc"]
esplora = ["fetch"]
rpc = ["secrecy", "fetch"]
fetch = ["reqwest", "hex", "serde", "serde_json", "bytes"]

# mutually exclusive
mainnet = ["bitcoins/mainnet"]
testnet = ["bitcoins/testnet"]
