[package]
name = "rmn-psbt"
version = "0.1.0-alpha.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
riemann-core = { path = "../core" }
rmn-btc = { path = "../bitcoin" }
bitcoin-spv = "2.0.0"
thiserror = "1.0"
serde = "1.0.105"
futures = { version = "0.3.5", optional = true }
rmn-ledger-btc = { path = "../ledger-btc", optional = true }
rmn-bip32 = { path = "../bip32" }

[features]
default = []
browser = ["ledger", "rmn-ledger-btc/browser"]
node = ["ledger", "rmn-ledger-btc/node"]
ledger = ["futures", "rmn-ledger-btc"]
