[package]
name = "rmn-psbt"
version = "0.1.0-alpha.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
riemann-core = { path = "../core" }
bitcoin-spv = "2.0.0"
thiserror = "1.0"
serde = "1.0.105"
futures = { version = "0.3.5", optional = true }
rmn-ledger-btc = { path = "../ledger-btc", optional = true }

[dependencies.rmn-btc]
path = "../bitcoin"
default-features = false

[dependencies.rmn-bip32]
path = "../bip32"
default-features = false

[features]
default = ["mainnet"]
browser = ["ledger", "rmn-ledger-btc/browser"]
node = ["ledger", "rmn-ledger-btc/node"]
ledger = ["futures", "rmn-ledger-btc"]
mainnet = ["rmn-btc/mainnet", "rmn-bip32/mainnet"]
testnet = ["rmn-btc/testnet", "rmn-bip32/testnet"]
