[package]
name = "bitcoins-psbt"
version = "0.1.0-alpha.0"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/summa-tx/bitcoins-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coins-core = { path = "../core" }
thiserror = "1.0"
serde = "1.0.105"
futures = { version = "0.3.5", optional = true }
bitcoins-ledger = { path = "../ledger-btc", optional = true }

[dependencies.bitcoins]
path = "../bitcoins"
default-features = false

[dependencies.coins-bip32]
path = "../bip32"
default-features = false

[features]
default = ["mainnet"]
browser = ["ledger", "bitcoins-ledger/browser"]
node = ["ledger", "bitcoins-ledger/node"]
ledger = ["futures", "bitcoins-ledger"]
mainnet = ["bitcoins/mainnet", "coins-bip32/mainnet"]
testnet = ["bitcoins/testnet", "coins-bip32/testnet"]

# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]