[package]
name = "coins-bip32"
version.workspace =  true
authors.workspace =  true
edition.workspace =  true
repository.workspace = true
license.workspace = true

categories = ["cryptography"]
keywords = ["bip32", "bitcoin", "cryptocurrency", "blockchain"]
description = "Bip32 in Rust"

[dependencies]
coins-core.workspace = true

bs58.workspace = true
digest.workspace = true
hmac.workspace = true
k256.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"

[features]
default = ["mainnet"]
mainnet = []
testnet = []
