[package]
name = "coins-bip32"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bip32", "bitcoin", "cryptocurrency", "blockchain"]
description = "Bip32 in Rust"

version.workspace =  true
edition.workspace =  true
rust-version.workspace = true
authors.workspace =  true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
coins-core.workspace = true

bs58.workspace = true
digest.workspace = true
hmac.workspace = true
k256.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = ["mainnet"]
mainnet = []
testnet = []
