[package]
name = "coins-bip39"
version = "0.8.7"
authors = [
    "Rohit Narurkar <rohit.narurkar@protonmail.com>",
    "James Prestwich <james@prestwi.ch>",
    "0xYYY <0xYYY@pm.me>",
]
edition = "2018"
description = "Bip39 in Rust"
repository = "https://github.com/summa-tx/coins"
license = "MIT OR Apache-2.0"

[dependencies]
coins-bip32.workspace = true

hmac.workspace = true
bitvec.workspace = true
pbkdf2.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true

# used by all wordlists
once_cell = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[features]
once_cell = ["dep:once_cell"]
default = ["all-langs"]
all-langs = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "english",
    "french",
    "italian",
    "japanese",
    "korean",
    "portuguese",
    "spanish",
]
chinese-simplified = ["dep:once_cell"]
chinese-traditional = ["dep:once_cell"]
czech = ["dep:once_cell"]
english = ["dep:once_cell"]
french = ["dep:once_cell"]
italian = ["dep:once_cell"]
japanese = ["dep:once_cell"]
korean = ["dep:once_cell"]
portuguese = ["dep:once_cell"]
spanish = ["dep:once_cell"]
