[package]
name = "coins-bip39"
description = "BIP39 implementation for coins"
keywords = ["bip39", "coins", "crypto", "wallet"]
categories = ["cryptography::cryptocurrencies"]
authors = [
    "Rohit Narurkar <rohit.narurkar@protonmail.com>",
    "James Prestwich <james@prestwi.ch>",
    "0xYYY <0xYYY@pm.me>",
]

version.workspace =  true
edition.workspace =  true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
coins-bip32.workspace = true

hmac.workspace = true
bitvec.workspace = true
pbkdf2.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gr03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
gr02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
hex.workspace = true

[features]
default = ["all-langs"]
all-langs = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "english",
    "french",
    "italian",
    "japanese",
    "korean",
    "portuguese",
    "spanish",
]
chinese-simplified = []
chinese-traditional = []
czech = []
english = []
french = []
italian = []
japanese = []
korean = []
portuguese = []
spanish = []
