[package]
name = "coins-core"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "cryptocurrency", "blockchain"]
description = "Core library for coins-bip32 and coins-bip39"

version.workspace =  true
edition.workspace =  true
rust-version.workspace = true
authors.workspace =  true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
base64.workspace = true
bech32.workspace = true
bs58 = { workspace = true, features = ["check"] }
digest.workspace = true
generic-array.workspace = true
hex.workspace = true
ripemd.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true