[package]
name = "coins-ledger"
authors = [
    "Summa <team@summa.one>",
    "James Prestwich <james@prestwi.ch>",
    "Zondax GmbH <info@zondax.ch>",
]
categories = ["authentication", "cryptography"]
keywords = ["ledger", "apdu", "cryptocurrency"]
description = "Ledger Nano X/S connection and communication management library"

version.workspace =  true
edition.workspace =  true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
hex.workspace = true
thiserror.workspace = true

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell.workspace = true
byteorder = "1.5"
tracing = "0.1"
hidapi-rusb = "1.3"
tokio = { version = "1.34", features = ["sync", "rt"] }

# linux native only
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serial_test = "2"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

[features]
browser = []
node = []

